tests/errors/try-non-carrier/main.pa
def go = fun {
  try x = 5
  ok x
}
